crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_elements-6.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: element(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 14,
            line: 1,
            fragment: "",
            extra: (),
        },
        Element {
            tag: "div",
            attrs: [],
            children: [
                Node {
                    metadata: NewLocation {
                        offset: 4,
                        length: 6,
                        line: 1,
                        column: 5,
                    },
                    node_type: Element(
                        Element {
                            tag: "li",
                            attrs: [],
                            children: [],
                        },
                    ),
                },
            ],
        },
    ),
)
