crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_multiple_elements-3.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: nodes(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 5,
            line: 1,
            fragment: "",
            extra: (),
        },
        [
            Node {
                metadata: NewLocation {
                    offset: 0,
                    length: 5,
                    line: 1,
                    column: 1,
                },
                node_type: Text(
                    "hello",
                ),
            },
        ],
    ),
)
