crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_multiple_elements-4.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: nodes(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 0,
            line: 1,
            fragment: "/div",
            extra: (),
        },
        [],
    ),
)
