crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_multiple_elements.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: nodes(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 29,
            line: 1,
            fragment: "",
            extra: (),
        },
        [
            Node {
                metadata: NewLocation {
                    offset: 0,
                    length: 8,
                    line: 1,
                    column: 1,
                },
                node_type: Element(
                    Element {
                        tag: "div",
                        attrs: [],
                        children: [],
                    },
                ),
            },
            Node {
                metadata: NewLocation {
                    offset: 8,
                    length: 15,
                    line: 1,
                    column: 9,
                },
                node_type: Element(
                    Element {
                        tag: "div",
                        attrs: [],
                        children: [
                            Node {
                                metadata: NewLocation {
                                    offset: 13,
                                    length: 6,
                                    line: 1,
                                    column: 14,
                                },
                                node_type: Text(
                                    "hello ",
                                ),
                            },
                        ],
                    },
                ),
            },
            Node {
                metadata: NewLocation {
                    offset: 23,
                    length: 6,
                    line: 1,
                    column: 24,
                },
                node_type: Text(
                    " hello",
                ),
            },
        ],
    ),
)
